// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`enum.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

=====================================output=====================================
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

================================================================================
`;

exports[`enum-with-description.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
"The state of an item"
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

"""
A multiline
description
"""
enum Status {
  ACTIVE
  INACTIVE
}

=====================================output=====================================
"The state of an item"
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

"""
A multiline
description
"""
enum Status {
  ACTIVE
  INACTIVE
}

================================================================================
`;
